# tertris

./: .gitignore  CODE_REVIEW_REPORT.md  LICENSE  README.md  REFACTORING_SUMMARY.md  VERIFICATION_REPORT.md  pyproject.toml  run_server.py
.github/workflows/: cd.yml  ci.yml
backend/: .flake8  __init__.py  config.py  main.py  mypy.ini  requirements.txt
backend/config/: ai_difficulty.yaml  items.yaml
backend/data/: leaderboard.db
backend/db/: __init__.py  connection.py  repositories.py
backend/events/: __init__.py  bus.py
backend/handlers/: __init__.py  ai_websocket.py  websocket.py
backend/legacy/: __init__.py  tetris_console.py  tetris_curses.py  tetris_pygame.py
backend/models/: __init__.py  ai_player.py  ai_room.py  game.py  items.py  leaderboard.py  room.py  tetromino.py
backend/scripts/: __init__.py  init_db.py
backend/tests/: conftest.py  test_api.py  test_clear_lines.py  test_leaderboard_api.py  test_room_battle.py  test_ui_automation.py
backend/tests/unit/: test_ai_player.py  test_ai_room.py  test_game.py  test_items.py  test_room.py  test_tetromino.py
backend/utils/: __init__.py  cache.py  config_loader.py  delta.py  helpers.py
data/: leaderboard.db  player_stats.json.backup  scores.json.backup
frontend/: index.html  leaderboard.html  single.html  solo.html
frontend/css/: style.css
frontend/css/components/: key-config-modal.css
frontend/js/: ai-game.js  config.global.js  solo.js  tetris.js
frontend/js/config/: api.config.js  game.config.js  index.js  key-bindings.config.js
frontend/js/core/: KeyConfigManager.global.js  KeyConfigManager.js
frontend/js/modules/: Config.js  InputHandler.js  ItemSystem.js  Renderer.js  TetrisGame.js  UIManager.js  WebSocketClient.js
plans/: refactoring-plan.md  refactoring-verification.md  single-player-mode-plan.md
